--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.nolat.duckhunt.Window</mainClass>
+                                    <mainClass>org.nolat.duckhunt.DuckhuntApp</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
